unpackaged/main/default/objects/OrderApi__Connection__c/OrderApi__Connection__c.object-meta.xml
<CustomObject>
    <description>Connections allow you to relate one Contact or Account to other Contacts and Accounts in the database.</description>
    <label>Connection</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Connections ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>