unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account related to the Connection. (Required if Contact is not populated)</description>
    <inlineHelpText>The Account related to the Connection. (Required if Contact is not populated)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (Account)</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>