unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Category__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Category__c</fullName>
    <description>**System Calculated** The Category of the related Connection Type.</description>
    <formula>TEXT(OrderApi__Connection_Type__r.OrderApi__Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** The Category of the related Connection Type.</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>