unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connected Account of the Connection. (Required if Connected Contact not populated)</description>
    <inlineHelpText>Connected Account of the Connection. (Required if Connected Contact not populated)</inlineHelpText>
    <label>Connected Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (Connected Account)</relationshipLabel>
    <relationshipName>Connections2</relationshipName>
    <type>Lookup</type>
</CustomField>