unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Connected_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Connected_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connected Contact of the Connection. (Required if Connected Account not populated)</description>
    <inlineHelpText>Connected Contact of the Connection. (Required if Connected Account not populated)</inlineHelpText>
    <label>Connected Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Connected Contact)</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>