unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Connected_To__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Connected_To__c</fullName>
    <description>**System Calculated** Link to either the Connected Contact or the Connected Account for the Connection.</description>
    <formula>IF(NOT(ISBLANK(OrderApi__Connected_Contact__c)),HYPERLINK(&quot;/&quot; &amp; OrderApi__Connected_Contact__c, OrderApi__Connected_Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Connected_Contact__r.LastName, &quot;_tab&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Connected_Account__c, OrderApi__Connected_Account__r.Name, &quot;_tab&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Link to either the Connected Contact or the Connected Account for the Connection.</inlineHelpText>
    <label>Connected To</label>
    <type>Text</type>
</CustomField>