unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Connection_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Connection Type for the Primary Entity.</description>
    <inlineHelpText>**Required** Connection Type for the Primary Entity.</inlineHelpText>
    <label>Connection Type</label>
    <referenceTo>OrderApi__Connection_Type__c</referenceTo>
    <relationshipLabel>Relationships (Connection Type)</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>