unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact related to the Connection. (Required if Account is not populated)</description>
    <inlineHelpText>The Contact related to the Connection. (Required if Account is not populated)</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Contact)</relationshipLabel>
    <relationshipName>Connections1</relationshipName>
    <type>Lookup</type>
</CustomField>