unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Additional information/notes about the Connection.</description>
    <inlineHelpText>Additional information/notes about the Connection.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>