unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__End_Date__c</fullName>
    <description>The date the Connection was terminated.</description>
    <inlineHelpText>The date the Connection was terminated.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>