unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Start_Date__c</fullName>
    <description>**Required** The date the Connection was established.</description>
    <inlineHelpText>**Required** The date the Connection was established.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>