unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__System_Created__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Field** Do not manually update/override. Automatically checked when the Connection was created by a trigger as the result of a new Connection inserted into the database.</description>
    <inlineHelpText>**System Field** Do not manually update/override. Automatically checked when the Connection was created by a trigger as the result of a new Connection inserted into the database.</inlineHelpText>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>