unpackaged/main/default/objects/OrderApi__Connection__c/fields/OrderApi__Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Termination_Reason__c</fullName>
    <description>Reason for terminating the connection.</description>
    <inlineHelpText>Reason for terminating the connection.</inlineHelpText>
    <label>Termination Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>